--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: "About"
-description: "你是我的梦想"
+description: "力能扛鼎的美德好少年"
 header-img: "img/about-bg.jpg"
 multilingual: true
 ---
