--- a/archive.html
+++ b/archive.html
@@ -1,7 +1,7 @@
 ---
 title: Archive
 layout: default
-description: keep hungry keep foolish
+description: Oi! Baby! Rock on!
 header-img: "img/tag-bg.jpg"
 ---
 
